# Operation_Stormcloud

./: LICENSE  README.md  package.json  tailwind.config.js
.github/workflows/: release.yml
BEAR-LLM-assistant/: .gitignore  DEPLOY.md  INSTALLATION.md  README.md  index.html  preview-enhanced.html  preview-system-aware.html  preview.html  tailwind.config.js  test.html  vite.config.ts
BEAR-LLM-assistant/src/: App.tsx  index.css
BEAR-LLM-assistant/src-tauri/: tauri.conf.json
BEAR-LLM-assistant/src-tauri/src/: llm_manager.rs  pii_detector.rs  system_monitor.rs
BEAR-LLM-assistant/src/components/: FileUpload.tsx  ModelSelector.tsx  StatusBar.tsx
BEAR-LLM-assistant/src/stores/: appStore.ts
src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  file_processor.rs  hardware_monitor.rs  main.rs  mcp_server.rs  rag_engine.rs
src/components/: ChatArea.tsx  ChatMessage.tsx  PIIGuard.tsx  Sidebar.tsx
